# kammerz

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  IDEA.md  IMPLEMENTATION_PLAN.md  README.md  TEST_PLAN.md  UI_DESIGN.md  build.rs  dprint.jsonc  is1vfftmdbb6a9trrajbcke5bcsjlotv.darc  justfile  manifest  package.json  rustfmt.toml  v2d19qhnkpbqivmaqvada9fbjltokqfe.darc  vite.config.ts
.beads/: config.yaml  dolt-backup.json  issues.jsonl  metadata.json
.cargo/: config.toml
.claude/: hookify.legacy-svelte.local.md  launch.json  settings.json
.claude/agents/: migration-checker.md
.claude/rules/: architecture.md  backend-patterns.md  commands.md  domain-conventions.md  frontend-patterns.md  tech-stack.md  workflow.md
.github/workflows/: ci.yml
deploy/: .env.example  kammerz.service
docs/adr/: 0001-record-architecture-decisions.md  0002-axum-sveltekit-spa-architecture.md  0003-fuzzy-date-field.md  0004-remove-fuzzy-dates.md  0005-24-hour-time.md  0006-accessible-contrast-colorblind-safe-theme.md  0007-data-driven-roll-status-sync.md  0008-roll-detail-two-pane-activity-log.md  0009-negatives-pickup-derived-state.md  0010-custom-24h-time-input.md  0011-full-dates-only.md  0012-chemistry-reference-self-learning.md  0013-activity-based-roll-lifecycle.md  README.md
entity/: Cargo.toml
entity/src/: chemical.rs  dev_stage.rs  development_lab.rs  development_self.rs  lab.rs  lib.rs  roll.rs  roll_event.rs  shot.rs  shot_lens.rs
frontend/: .prettierignore  .prettierrc  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: app.css  app.html
frontend/tests/: auth.setup.ts  shared.ts  smoke.spec.ts
import/: README.md  export-notes.applescript
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_initial_schema.rs  m20250101_000002_seed_film_stocks.rs  m20250201_000003_settings_table.rs  m20250216_000004_add_roll_lens_id.rs  m20250219_000006_lens_mount_table.rs  m20250221_000010_seed_fixed_lens_mount.rs  m20250221_000011_add_default_lens_id.rs  m20260221_000012_seed_instant_film_stocks.rs  m20260221_000013_seed_user_cameras.rs  m20260222_000014_seed_user_lenses.rs  m20260222_000015_seed_qbm_and_extras.rs  m20260222_000016_seed_user_gear_batch2.rs  m20260222_000017_rename_name_on_lens_to_model.rs  m20260222_000019_schema_hardening.rs  m20260602_000021_add_roll_lifecycle_dates.rs  m20260614_000022_create_roll_events.rs  m20260618_000023_add_shot_time.rs  m20260621_000024_drop_date_fuzzy.rs  m20260701_000025_normalize_aperture_bare.rs  m20260711_000026_add_negatives_pickup.rs  m20260713_000027_sync_catalog_after_import.rs  m20260713_000028_create_chemicals.rs  m20260713_000029_normalize_dev_chemistry.rs  m20260718_000030_activity_lifecycle.rs  seed_guard.rs
scripts/: gen-favicon.sh  pack-ico.mjs
src/: activity.rs  app.css  compression.rs  config.rs  db.rs  error.rs  extract.rs  lib.rs  main.rs  panic.rs  patch.rs  spa.rs  validate.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migration/src/: lib.rs  m20250101_000001_initial_schema.rs  m20250101_000002_seed_film_stocks.rs  m20250217_000005_add_rolls_lens_id_index.rs  m20250221_000007_seed_lf_shutter_mounts.rs  m20250221_000008_rename_large_format_mount.rs  m20250221_000009_remove_generic_large_format.rs  m20260221_000012_seed_instant_film_stocks.rs  m20260222_000016_seed_user_gear_batch2.rs  m20260222_000017_rename_name_on_lens_to_model.rs  m20260222_000018_trim_brand_whitespace.rs  m20260223_000020_repair_fixed_lens_data.rs
src-tauri/migrations/: 001_initial_schema.sql  002_seed_film_stocks.sql
src-tauri/src/: db.rs  lib.rs  main.rs  patch.rs
src-tauri/src/commands/: cameras.rs  development.rs  film_stocks.rs  import.rs  labs.rs  lens_mounts.rs  lenses.rs  mod.rs  rolls.rs  search.rs  settings.rs  shots.rs  stats.rs
src-tauri/src/entities/: camera.rs  camera_lens.rs  camera_maintenance.rs  development_lab.rs  development_self.rs  film_stock.rs  lab.rs  lens.rs  lens_mount.rs  mod.rs  roll.rs  setting.rs  shot.rs
src-tauri/src/services/: camera_service.rs  development_service.rs  film_stock_service.rs  import_service.rs  lab_service.rs  lens_mount_service.rs  lens_service.rs  mod.rs  roll_service.rs  search_service.rs  settings_service.rs  shot_service.rs  stats_service.rs
src-tauri/tests/: camera_tests.rs  development_tests.rs  film_stock_tests.rs  lens_tests.rs  roll_tests.rs  search_tests.rs  shot_tests.rs
src-tauri/tests/common/: mod.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs
src/routes/: +layout.svelte  +page.svelte  backup.rs  cameras.rs  development.rs  film_stocks.rs  import.rs  labs.rs  lens_mounts.rs  lenses.rs  mod.rs  rolls.rs  search.rs  settings.rs  shots.rs  stats.rs
src/services/: camera_service.rs  chemical_service.rs  development_service.rs  film_stock_service.rs  import_service.rs  lab_service.rs  lens_mount_service.rs  (+8 more)
tests/: auth.rs  auth_guard.rs  backup.rs  cameras.rs  chemicals.rs  compression.rs  db_snapshot.rs  development.rs  etag.rs  extractor_rejections.rs  film_stocks.rs  health.rs  import.rs  import_service.rs  labs.rs  lens_mounts.rs  lenses.rs  negatives.rs  panic.rs  roll_events.rs  rolls.rs  search.rs  seed_catalog.rs  settings.rs  shots.rs  stats.rs  status_flows.rs
(+179 files in other folders)
