[workspace]
members = [".", "entity", "migration"]

[package]
name = "kammerz"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

axum = { version = "0.8", features = ["macros"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"], default-features = false }
argon2 = { version = "0.5", features = ["std"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
time = "0.3"
dotenvy = "0.15"
http = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
