[workspace]
members = [".", "entity", "migration"]

[package]
name = "kammerz"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
http = "1"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rpassword = "7"
rust-embed = "8"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"], default-features = false }
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower_governor = { version = "0.8.0", default-features = false, features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
