[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"], default-features = false }
# 0.26 on purpose: sea-orm already resolves strum 0.26 transitively, so this
# reuses that core instead of compiling a second (semver-incompatible) major.
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
# Runtime for the m019 re-run-safety tests (kammerz-vlyu.9). tokio is already in
# the lockfile via sea-orm's runtime-tokio-rustls, so this adds no new crate.
tokio = { version = "1", features = ["macros", "rt"] }
